--- a/configs/5c_defconfig
+++ b/configs/5c_defconfig
@@ -10,7 +10,7 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_7=y
 BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_10=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
-BR2_TARGET_GENERIC_HOSTNAME="licheepi-zero"
+BR2_TARGET_GENERIC_HOSTNAME="NXElec Winter"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Buildroot for the LicheePi Zero"
 BR2_TARGET_GENERIC_GETTY_PORT="ttyS0"
 BR2_TARGET_GENERIC_GETTY_BAUDRATE_115200=y
@@ -124,6 +124,7 @@ BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_SPI_TOOLS=y
 BR2_PACKAGE_SUNXI_CEDARX=y
 BR2_PACKAGE_SYSSTAT=y
+BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_USB_MODESWITCH_DATA=y
 BR2_PACKAGE_PYTHON=y
 BR2_PACKAGE_PYTHON_PY_PYC=y
